force-app/main/default/objects/Empatia__c/fields/Ciudad_Neuquen__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Neuquen__c</fullName>
    <label>Ciudad Neuquen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aluminé</fullName>
            </value>
            <value>
                <fullName>Andacollo</fullName>
            </value>
            <value>
                <fullName>Añelo</fullName>
            </value>
            <value>
                <fullName>Bajada del Agrio</fullName>
            </value>
            <value>
                <fullName>Barrancas</fullName>
            </value>
            <value>
                <fullName>Buta Ranquil</fullName>
            </value>
            <value>
                <fullName>Caviahue - Copahue</fullName>
            </value>
            <value>
                <fullName>Centenario</fullName>
            </value>
            <value>
                <fullName>Chos Malal</fullName>
            </value>
            <value>
                <fullName>Cutral - Có</fullName>
            </value>
            <value>
                <fullName>El Cholar</fullName>
            </value>
            <value>
                <fullName>El Huecú</fullName>
            </value>
            <value>
                <fullName>Huigan Có</fullName>
            </value>
            <value>
                <fullName>Junín de los Andes</fullName>
            </value>
            <value>
                <fullName>Las Coloradas</fullName>
            </value>
            <value>
                <fullName>Las Lajas</fullName>
            </value>
            <value>
                <fullName>Las Ovejas</fullName>
            </value>
            <value>
                <fullName>Loncopué</fullName>
            </value>
            <value>
                <fullName>Los Miches</fullName>
            </value>
            <value>
                <fullName>Mariano Moreno</fullName>
            </value>
            <value>
                <fullName>Neuquén</fullName>
            </value>
            <value>
                <fullName>Picún Leufú</fullName>
            </value>
            <value>
                <fullName>Piedra del Águila</fullName>
            </value>
            <value>
                <fullName>Plaza Huincul</fullName>
            </value>
            <value>
                <fullName>Plottier</fullName>
            </value>
            <value>
                <fullName>Rincón de los Sauces</fullName>
            </value>
            <value>
                <fullName>San Martín de los Andes</fullName>
            </value>
            <value>
                <fullName>San Patricio del Chañar</fullName>
            </value>
            <value>
                <fullName>Senillosa</fullName>
            </value>
            <value>
                <fullName>Taquimilán</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>