force-app/main/default/objects/Empatia__c/fields/Ciudad_Rio_Negro__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Rio_Negro__c</fullName>
    <label>Ciudad Rio Negro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allen</fullName>
            </value>
            <value>
                <fullName>Campo Grande</fullName>
            </value>
            <value>
                <fullName>Catriel</fullName>
            </value>
            <value>
                <fullName>Cervantes</fullName>
            </value>
            <value>
                <fullName>Chichinales</fullName>
            </value>
            <value>
                <fullName>Chimpay</fullName>
            </value>
            <value>
                <fullName>Choele Choel</fullName>
            </value>
            <value>
                <fullName>Cinco Saltos</fullName>
            </value>
            <value>
                <fullName>Cipolletti</fullName>
            </value>
            <value>
                <fullName>Comallo</fullName>
            </value>
            <value>
                <fullName>Contralmirante Cordero</fullName>
            </value>
            <value>
                <fullName>Coronel Belisle</fullName>
            </value>
            <value>
                <fullName>Darwin</fullName>
            </value>
            <value>
                <fullName>Dina Huapi</fullName>
            </value>
            <value>
                <fullName>El Bolsón</fullName>
            </value>
            <value>
                <fullName>General Conesa</fullName>
            </value>
            <value>
                <fullName>General Enrique Godoy</fullName>
            </value>
            <value>
                <fullName>General Fernández Oro</fullName>
            </value>
            <value>
                <fullName>General Roca</fullName>
            </value>
            <value>
                <fullName>Guardia Mitre</fullName>
            </value>
            <value>
                <fullName>Ingeniero Jacobacci</fullName>
            </value>
            <value>
                <fullName>Ingeniero Luis A. Huergo</fullName>
            </value>
            <value>
                <fullName>Lamarque</fullName>
            </value>
            <value>
                <fullName>Los Menucos</fullName>
            </value>
            <value>
                <fullName>Luis Beltrán</fullName>
            </value>
            <value>
                <fullName>Mainqué</fullName>
            </value>
            <value>
                <fullName>Maquinchao</fullName>
            </value>
            <value>
                <fullName>Ministro Ramos Mexía</fullName>
            </value>
            <value>
                <fullName>Pilcaniyeu</fullName>
            </value>
            <value>
                <fullName>Pomona</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>