force-app/main/default/objects/Empatia__c/fields/Ciudad_Salta__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Salta__c</fullName>
    <label>Ciudad Salta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aguaray</fullName>
            </value>
            <value>
                <fullName>Aguas Blancas</fullName>
            </value>
            <value>
                <fullName>Angastaco</fullName>
            </value>
            <value>
                <fullName>Animaná</fullName>
            </value>
            <value>
                <fullName>Apolinario Saravia</fullName>
            </value>
            <value>
                <fullName>Cachi</fullName>
            </value>
            <value>
                <fullName>Cafayate</fullName>
            </value>
            <value>
                <fullName>Campo Quijano</fullName>
            </value>
            <value>
                <fullName>Campo Santo</fullName>
            </value>
            <value>
                <fullName>Cerrillos</fullName>
            </value>
            <value>
                <fullName>Chicoana</fullName>
            </value>
            <value>
                <fullName>Colonia Santa Rosa</fullName>
            </value>
            <value>
                <fullName>Coronel Moldes</fullName>
            </value>
            <value>
                <fullName>El Bordo</fullName>
            </value>
            <value>
                <fullName>El Carril</fullName>
            </value>
            <value>
                <fullName>El Galpón</fullName>
            </value>
            <value>
                <fullName>El Jardín</fullName>
            </value>
            <value>
                <fullName>El Potrero</fullName>
            </value>
            <value>
                <fullName>El Quebrachal</fullName>
            </value>
            <value>
                <fullName>El Tala</fullName>
            </value>
            <value>
                <fullName>Embarcación</fullName>
            </value>
            <value>
                <fullName>General Ballivián</fullName>
            </value>
            <value>
                <fullName>General Güemes</fullName>
            </value>
            <value>
                <fullName>General Mosconi</fullName>
            </value>
            <value>
                <fullName>General Pizarro</fullName>
            </value>
            <value>
                <fullName>Guachipas</fullName>
            </value>
            <value>
                <fullName>Hipólito Yrigoyen</fullName>
            </value>
            <value>
                <fullName>Iruya</fullName>
            </value>
            <value>
                <fullName>Isla de Cañas</fullName>
            </value>
            <value>
                <fullName>Joaquín Víctor González</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>