force-app/main/default/objects/Empatia__c/fields/Ciudad_San_Juan__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_San_Juan__c</fullName>
    <label>Ciudad San Juan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25 de Mayo</fullName>
            </value>
            <value>
                <fullName>9 de Julio</fullName>
            </value>
            <value>
                <fullName>Albardón</fullName>
            </value>
            <value>
                <fullName>Angaco</fullName>
            </value>
            <value>
                <fullName>Calingasta</fullName>
            </value>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>Caucete</fullName>
            </value>
            <value>
                <fullName>Chimbas</fullName>
            </value>
            <value>
                <fullName>Iglesia</fullName>
            </value>
            <value>
                <fullName>Jáchal</fullName>
            </value>
            <value>
                <fullName>Pocito</fullName>
            </value>
            <value>
                <fullName>Rawson</fullName>
            </value>
            <value>
                <fullName>Rivadavia</fullName>
            </value>
            <value>
                <fullName>San Martín</fullName>
            </value>
            <value>
                <fullName>Santa Lucía</fullName>
            </value>
            <value>
                <fullName>Sarmiento</fullName>
            </value>
            <value>
                <fullName>Ullum</fullName>
            </value>
            <value>
                <fullName>Valle Fértil</fullName>
            </value>
            <value>
                <fullName>Zonda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>