force-app/main/default/objects/Empatia__c/fields/Ciudad_San_Luis__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_San_Luis__c</fullName>
    <label>Ciudad San Luis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anchorena</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Buena Esperanza</fullName>
            </value>
            <value>
                <fullName>Candelaria</fullName>
            </value>
            <value>
                <fullName>Concarán</fullName>
            </value>
            <value>
                <fullName>El Volcán</fullName>
            </value>
            <value>
                <fullName>Juana Koslay</fullName>
            </value>
            <value>
                <fullName>Justo Daract</fullName>
            </value>
            <value>
                <fullName>La Punta</fullName>
            </value>
            <value>
                <fullName>La Toma</fullName>
            </value>
            <value>
                <fullName>Luján</fullName>
            </value>
            <value>
                <fullName>Naschel</fullName>
            </value>
            <value>
                <fullName>Nogolí</fullName>
            </value>
            <value>
                <fullName>Potrero de los Funes</fullName>
            </value>
            <value>
                <fullName>Quines</fullName>
            </value>
            <value>
                <fullName>San Francisco del Monte de Oro</fullName>
            </value>
            <value>
                <fullName>San Luis</fullName>
            </value>
            <value>
                <fullName>San Martín</fullName>
            </value>
            <value>
                <fullName>Santa Rosa del Conlara</fullName>
            </value>
            <value>
                <fullName>Tilisarao</fullName>
            </value>
            <value>
                <fullName>Unión</fullName>
            </value>
            <value>
                <fullName>Villa de Merlo</fullName>
            </value>
            <value>
                <fullName>Villa General Roca / Los Manantiales</fullName>
            </value>
            <value>
                <fullName>Villa Mercedes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>