force-app/main/default/objects/Empatia__c/fields/Ciudad_Santa_Cruz__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Santa_Cruz__c</fullName>
    <label>Ciudad Santa Cruz</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>28 de Noviembre</fullName>
            </value>
            <value>
                <fullName>Caleta Olivia</fullName>
            </value>
            <value>
                <fullName>Comandante Luis Piedrabuena</fullName>
            </value>
            <value>
                <fullName>El Calafate</fullName>
            </value>
            <value>
                <fullName>El Chaltén</fullName>
            </value>
            <value>
                <fullName>Gobernador Gregores</fullName>
            </value>
            <value>
                <fullName>Las Heras</fullName>
            </value>
            <value>
                <fullName>Los Antiguos</fullName>
            </value>
            <value>
                <fullName>Perito Moreno</fullName>
            </value>
            <value>
                <fullName>Pico Truncado</fullName>
            </value>
            <value>
                <fullName>Puerto Deseado</fullName>
            </value>
            <value>
                <fullName>Puerto San Julián</fullName>
            </value>
            <value>
                <fullName>Puerto Santa Cruz</fullName>
            </value>
            <value>
                <fullName>Río Gallegos</fullName>
            </value>
            <value>
                <fullName>Río Turbio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>