force-app/main/default/objects/Empatia__c/fields/Ciudad_Santa_Fe__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Santa_Fe__c</fullName>
    <label>Ciudad Santa Fe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Armstrong</fullName>
            </value>
            <value>
                <fullName>Arroyo Seco</fullName>
            </value>
            <value>
                <fullName>Avellaneda</fullName>
            </value>
            <value>
                <fullName>Calchaquí</fullName>
            </value>
            <value>
                <fullName>Capitán Bermúdez</fullName>
            </value>
            <value>
                <fullName>Carcarañá</fullName>
            </value>
            <value>
                <fullName>Casilda</fullName>
            </value>
            <value>
                <fullName>Cañada de Gómez</fullName>
            </value>
            <value>
                <fullName>Ceres</fullName>
            </value>
            <value>
                <fullName>Coronda</fullName>
            </value>
            <value>
                <fullName>El Trébol</fullName>
            </value>
            <value>
                <fullName>Esperanza</fullName>
            </value>
            <value>
                <fullName>Firmat</fullName>
            </value>
            <value>
                <fullName>Florencia</fullName>
            </value>
            <value>
                <fullName>Fray Luis Beltrán</fullName>
            </value>
            <value>
                <fullName>Frontera</fullName>
            </value>
            <value>
                <fullName>Funes</fullName>
            </value>
            <value>
                <fullName>Granadero Baigorria</fullName>
            </value>
            <value>
                <fullName>Gálvez</fullName>
            </value>
            <value>
                <fullName>Laguna Paiva</fullName>
            </value>
            <value>
                <fullName>Las Parejas</fullName>
            </value>
            <value>
                <fullName>Las Rosas</fullName>
            </value>
            <value>
                <fullName>Las Toscas</fullName>
            </value>
            <value>
                <fullName>Malabrigo</fullName>
            </value>
            <value>
                <fullName>Pueblo Esther</fullName>
            </value>
            <value>
                <fullName>Puerto General San Martín</fullName>
            </value>
            <value>
                <fullName>Pérez</fullName>
            </value>
            <value>
                <fullName>Rafaela</fullName>
            </value>
            <value>
                <fullName>Reconquista</fullName>
            </value>
            <value>
                <fullName>Recreo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>