force-app/main/default/objects/Empatia__c/fields/Ciudad_Santiago_del_Estero__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Santiago_del_Estero__c</fullName>
    <label>Ciudad Santiago del Estero</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Añatuya</fullName>
            </value>
            <value>
                <fullName>Bandera</fullName>
            </value>
            <value>
                <fullName>Beltrán</fullName>
            </value>
            <value>
                <fullName>Campo Gallo</fullName>
            </value>
            <value>
                <fullName>Clodomira</fullName>
            </value>
            <value>
                <fullName>Colonia Dora</fullName>
            </value>
            <value>
                <fullName>Fernández</fullName>
            </value>
            <value>
                <fullName>Frías</fullName>
            </value>
            <value>
                <fullName>Ingeniero Forres</fullName>
            </value>
            <value>
                <fullName>La Banda</fullName>
            </value>
            <value>
                <fullName>Loreto</fullName>
            </value>
            <value>
                <fullName>Los Juríes</fullName>
            </value>
            <value>
                <fullName>Los Telares</fullName>
            </value>
            <value>
                <fullName>Monte Quemado</fullName>
            </value>
            <value>
                <fullName>Nueva Esperanza</fullName>
            </value>
            <value>
                <fullName>Pampa de los Guanacos</fullName>
            </value>
            <value>
                <fullName>Pinto</fullName>
            </value>
            <value>
                <fullName>Pozo Hondo</fullName>
            </value>
            <value>
                <fullName>Quimilí</fullName>
            </value>
            <value>
                <fullName>San Pedro de Guasayán</fullName>
            </value>
            <value>
                <fullName>Santiago del Estero</fullName>
            </value>
            <value>
                <fullName>Selva</fullName>
            </value>
            <value>
                <fullName>Sumampa</fullName>
            </value>
            <value>
                <fullName>Suncho Corral</fullName>
            </value>
            <value>
                <fullName>Termas de Río Hondo</fullName>
            </value>
            <value>
                <fullName>Tintina</fullName>
            </value>
            <value>
                <fullName>Villa Atamisqui</fullName>
            </value>
            <value>
                <fullName>Villa Ojo de Agua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>