force-app/main/default/objects/Empatia__c/fields/Ciudad_Tierra_del_Fuego__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Tierra_del_Fuego__c</fullName>
    <label>Ciudad Tierra del Fuego</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Río Grande</fullName>
            </value>
            <value>
                <fullName>Tolhuin</fullName>
            </value>
            <value>
                <fullName>Ushuaia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>