force-app/main/default/objects/Empatia__c/fields/Ciudad_Tucuman__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Tucuman__c</fullName>
    <label>Ciudad Tucuman</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aguilares</fullName>
            </value>
            <value>
                <fullName>Alderetes</fullName>
            </value>
            <value>
                <fullName>Banda del Río Salí</fullName>
            </value>
            <value>
                <fullName>Bella Vista</fullName>
            </value>
            <value>
                <fullName>Burruyacú</fullName>
            </value>
            <value>
                <fullName>Concepción</fullName>
            </value>
            <value>
                <fullName>Famaillá</fullName>
            </value>
            <value>
                <fullName>Graneros</fullName>
            </value>
            <value>
                <fullName>Juan B. Alberdi</fullName>
            </value>
            <value>
                <fullName>La Cocha</fullName>
            </value>
            <value>
                <fullName>Las Talitas</fullName>
            </value>
            <value>
                <fullName>Lules</fullName>
            </value>
            <value>
                <fullName>Monteros</fullName>
            </value>
            <value>
                <fullName>San Miguel de Tucumán</fullName>
            </value>
            <value>
                <fullName>Simoca</fullName>
            </value>
            <value>
                <fullName>Tafí del Valle</fullName>
            </value>
            <value>
                <fullName>Tafí Viejo</fullName>
            </value>
            <value>
                <fullName>Trancas</fullName>
            </value>
            <value>
                <fullName>Yerba Buena</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>