force-app/main/default/objects/Empatia__c/fields/Direccion_Completa__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Completa__c</fullName>
    <formula>Empatia_Activista__r.Citizen__r.Direccion_Completa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direccion Completa</label>
    <type>Text</type>
</CustomField>