force-app/main/default/objects/Empatia__c/fields/Documento_Emparejado__c.field-meta.xml
<CustomField>
    <fullName>Documento_Emparejado__c</fullName>
    <formula>NOT( ISBLANK(Empatia_Activista__r.Citizen__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento Emparejado</label>
    <type>Checkbox</type>
</CustomField>