force-app/main/default/objects/Empatia__c/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <formula>Empatia_Activista__r.Citizen__r.Age_f_x__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>