force-app/main/default/objects/Empatia__c/fields/Empatia_Activista__c.field-meta.xml
<CustomField>
    <fullName>Empatia_Activista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empatia Activista</label>
    <referenceTo>Empatia_Activista__c</referenceTo>
    <relationshipLabel>Respuestas Encuesta</relationshipLabel>
    <relationshipName>Empatias</relationshipName>
    <type>Lookup</type>
</CustomField>