force-app/main/default/objects/Empatia__c/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <label>Evento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>