force-app/main/default/objects/Empatia__c/fields/Fecha_de_Inscripcion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Inscripcion__c</fullName>
    <formula>Empatia_Activista__r.Fecha_de_Inscripcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Inscripcion</label>
    <type>DateTime</type>
</CustomField>