force-app/main/default/objects/Empatia__c/fields/Municipio_Buenos_Aires__c.field-meta.xml
<CustomField>
    <fullName>Municipio_Buenos_Aires__c</fullName>
    <label>Municipio Buenos Aires</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25 de Mayo</fullName>
            </value>
            <value>
                <fullName>9 de Julio</fullName>
            </value>
            <value>
                <fullName>Adolfo Alsina</fullName>
            </value>
            <value>
                <fullName>Adolfo Gonzales Chaves</fullName>
            </value>
            <value>
                <fullName>Alberti</fullName>
            </value>
            <value>
                <fullName>Almirante Brown</fullName>
            </value>
            <value>
                <fullName>Arrecifes</fullName>
            </value>
            <value>
                <fullName>Avellaneda</fullName>
            </value>
            <value>
                <fullName>Ayacucho</fullName>
            </value>
            <value>
                <fullName>Azul</fullName>
            </value>
            <value>
                <fullName>Bahía Blanca</fullName>
            </value>
            <value>
                <fullName>Balcarce</fullName>
            </value>
            <value>
                <fullName>Baradero</fullName>
            </value>
            <value>
                <fullName>Benito Juárez</fullName>
            </value>
            <value>
                <fullName>Berazategui</fullName>
            </value>
            <value>
                <fullName>Berisso</fullName>
            </value>
            <value>
                <fullName>Bolivar</fullName>
            </value>
            <value>
                <fullName>Bragado</fullName>
            </value>
            <value>
                <fullName>Brandsen</fullName>
            </value>
            <value>
                <fullName>Campana</fullName>
            </value>
            <value>
                <fullName>Cañuelas</fullName>
            </value>
            <value>
                <fullName>Capitán Sarmiento</fullName>
            </value>
            <value>
                <fullName>Carlos Casares</fullName>
            </value>
            <value>
                <fullName>Carlos Tejedor</fullName>
            </value>
            <value>
                <fullName>Carmen de Areco</fullName>
            </value>
            <value>
                <fullName>Castelli</fullName>
            </value>
            <value>
                <fullName>Chacabuco</fullName>
            </value>
            <value>
                <fullName>Chascomús</fullName>
            </value>
            <value>
                <fullName>Chivilcoy</fullName>
            </value>
            <value>
                <fullName>Colón</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>