force-app/main/default/objects/Empatia__c/fields/Nombre_completo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_completo__c</fullName>
    <formula>if(
 ISBLANK(Empatia_Activista__r.Citizen__c),
 Nombre__c &amp; &quot; &quot; &amp; Apellido__c,
 Empatia_Activista__r.Citizen__r.FirstName &amp; &quot; &quot; &amp;  Empatia_Activista__r.Citizen__r.LastName  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre completo</label>
    <type>Text</type>
</CustomField>