force-app/main/default/objects/Empatia__c/fields/Nombre_Completo_con_Link__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo_con_Link__c</fullName>
    <formula>HYPERLINK(&apos;/s/empatia/&apos; + Id + &apos;/&apos;,  Nombre_completo__c, &apos;_self&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Completo.</label>
    <type>Text</type>
</CustomField>