force-app/main/default/objects/Empatia__c/fields/Participacion__c.field-meta.xml
<CustomField>
    <fullName>Participacion__c</fullName>
    <label>Participacion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Difundir en Redes Sociales y WhatsApp</fullName>
            </value>
            <value>
                <fullName>Ir a la presentación de Facundo Manes en mi ciudad</fullName>
            </value>
            <value>
                <fullName>Subirte a la caravana de la Empatía</fullName>
            </value>
            <value>
                <fullName>Poner un cartel de Empatía en mi casa</fullName>
            </value>
            <value>
                <fullName>Ver y/o presentar un proyecto para mi ciudad</fullName>
            </value>
            <value>
                <fullName>Ver y/o realizar un micro aporte en causas sociales de mi ciudad</fullName>
            </value>
            <value>
                <fullName>Dedicar 10hs semanales a tareas de activismo en mi ciudad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>