force-app/main/default/objects/Empatia__c/fields/Response_Token__c.field-meta.xml
<CustomField>
    <fullName>Response_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Response Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>