force-app/main/default/objects/Empatia__c/fields/Respuesta_Valida__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Valida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Respuesta Valida</label>
    <type>Checkbox</type>
</CustomField>