force-app/main/default/objects/Empatia__c/recordTypes/Activista.recordType-meta.xml
<RecordType>
    <fullName>Activista</fullName>
    <active>true</active>
    <label>Activista</label>
</RecordType>