force-app/main/default/objects/Empatia__c/listViews/Activistas_con_Documento.listView-meta.xml
<ListView>
    <fullName>Activistas_con_Documento</fullName>
    <columns>Nombre_Completo_con_Link__c</columns>
    <columns>DNI__c</columns>
    <columns>Edad__c</columns>
    <columns>Fecha_de_Nacimiento__c</columns>
    <columns>Direccion_Completa__c</columns>
    <columns>Administrative_Level_1__c</columns>
    <columns>Administrative_Level_2__c</columns>
    <columns>Administrative_Level_3__c</columns>
    <columns>Fecha_de_Inscripcion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Documento_Emparejado__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Activistas</label>
</ListView>